--- a/explore.html
+++ b/explore.html
@@ -155,61 +155,61 @@
 <div class="slideshow-container">
   <div class="mySlides fade">
     <div class="numbertext">1 / 7</div>
-    <img src="../images/login.jpg" style="width:100%">
+    <img src="./images/login.jpg" style="width:100%">
     <div class="text">Caption Text</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">2 / 7</div>
-    <img src="../images/sign in.jpg" style="width:100%">
+    <img src="./images/sign in.jpg" style="width:100%">
     <div class="text">Caption Two</div>
   </div>
 
   <div class="mySlides fade">
     <div class="numbertext">3 / 7</div>
-    <img src="../images/a.jpg" style="width:100%">
+    <img src="./images/a.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">4 / 7</div>
-    <img src="../images/b.jpg" style="width:100%">
+    <img src="./images/b.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">5 / 7</div>
-    <img src="../images/c.jpg" style="width:100%">
+    <img src="./images/c.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">6 / 7</div>
-    <img src="../images/d.jpg" style="width:100%">
+    <img src="./images/d.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
     <div class="mySlides fade">
     <div class="numbertext">7 / 8</div>
-    <img src="../images/e.jpg" style="width:100%">
+    <img src="./images/e.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">8 / 8</div>
-    <img src="../images/f.jpg" style="width:100%">
+    <img src="./images/f.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
    <div class="mySlides fade">
     <div class="numbertext">8 / 8</div>
-    <img src="../images/g.jpg" style="width:100%">
+    <img src="./images/g.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
   
   <div class="mySlides fade">
     <div class="numbertext">8 / 8</div>
-    <img src="../images/h.jpg" style="width:100%">
+    <img src="./images/h.jpg" style="width:100%">
     <div class="text">Caption Three</div>
   </div>
 
