--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <h2 class="logo">Travel</h2> 
       <div class="toggle"></div>
     </header>
-    <link rel="stylesheet" href="../css/style.css"> </link>
-  <script src="../js/myjs.js"></script>
+    <link rel="stylesheet" href="./css/style.css"> </link>
+  <script src="./js/myjs.js"></script>
     </head>
     <body>
     <video src="https://res.cloudinary.com/dpduqkvf0/video/upload/v1711353003/a_odzptb.mp4" muted loop autoplay></video>
@@ -15,9 +15,9 @@
       <h2>Never Stop </h2> 
       <h3>Exploring The World</h3>
       <p>Embark on a journey of a lifetime, where every step unveils new wonders and endless possibilities. From awe-inspiring landscapes to vibrant cultures, the world is a treasure trove waiting to be explored. Immerse yourself in diverse experiences, immerse yourself in the warmth of local communities, and create memories that will last a lifetime. Embrace the thrill of the unknown, let curiosity be your guide, and let the spirit of adventure lead you to the most extraordinary destinations. Uncover hidden gems, witness breathtaking natural wonders, and indulge in authentic flavors from around the globe. The world is calling - are you ready to answer?</p>
-      <a href="../templates/explore.html">Explore</a>
-      <a href="../templates/login.html">Login</a>
-      <a href="../templates/sign in.html">Sign in</a>     
+      <a href="./explore.html">Explore</a>
+      <a href="./login.html">Login</a>
+      <a href="./sign in.html">Sign in</a>     
     </div>
     <ul class="social">
       <li><a href="#"><img src="https://i.ibb.co/x7P24fL/facebook.png"></a></li>
@@ -27,12 +27,12 @@
   </section>
   <div class="menu">
     <ul>
-      <li><a href="../templates/index.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="#">News</a></li>
       <li><a href="#">Destination</a></li>
       <li><a href="#">Blog</a></li>
       <li><a href="#">Contact</a></li>
-      <li><a href="../templates/about.html">About</a></li>
+      <li><a href="about.html">About</a></li>
     </ul>
   </div>
   </body>
